# cres-validation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  colums_validator.py  config.ini  config.py  convert_txt_to_csv.py  csv_validator.py  main.py  mkdocs.yml  pyproject.toml  reset-main.sh  ruff.toml  validate_columns.py
.github/workflows/: ci.yml  docs.yml
cres_validation/: __init__.py  columns_number_validator.py  colums_validator.py  config.ini  config.py  convert_to_parquet.py  convert_txt_to_csv.py  rejected_lines.py  validate_columns.py
cres_validation/columns_validator/: __init__.py  columns_validator.py  helpers.py  schemas.py
docs/: api.md  configuration.md  development.md  index.md  installation.md  tests.md  usage.md
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/configuration/: index.html
site/development/: index.html
site/installation/: index.html
site/search/: search_index.json
site/tests/: index.html
site/usage/: index.html
tests/: README.md  config.ini  conftest.py  test_columns_validator.py  test_convert_to_parquet.py  test_convert_txt_to_csv.py  test_csv_validator.py  test_performance.py
tests/fixtures/: .gitkeep  expected_output.csv
tests/fixtures/input/csv/: echantillon_cnrps_pb_fondation_fidaa.csv  echantillon_virgule_dans_nom.csv  test_file_with_spaces.csv
tests/fixtures/input/source/: echantillon cnrps pb fondation fidaa.txt  echantillon_virgule_dans_nom.txt
tests/fixtures/output/: corrected_echantillon_cnrps_pb_fondation_fidaa.csv  expected_output.csv
tests/fixtures/output/csv/: corrected_echantillon_cnrps_pb_fondation_fidaa.csv  corrected_echantillon_virgule_dans_nom.csv
(+2 files in other folders)
