[project]
name = "cres-validation"
version = "0.2.0"
description = "Validation et correction de fichiers CSV pour le projet CRES"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandera>=0.28.1",
    "pandas>=2.0.0",
    "chardet>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "ruff>=0.14.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
